[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "xi-term"
version = "0.1.0"

[dependencies]
clap = "2.31.1"
error-chain = "0.11.0"
futures = "0.1.18"
log = "0.4.1"
log4rs = "0.8.0"
termion = "1.5.1"
tokio-core = "0.1.12"
xdg = "2.1.0"

[dependencies.clippy]
optional = true
version = "0.0.187"

[dependencies.xrl]
git = "https://github.com/xi-frontend/xrl"
