[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "xi-term"
version = "0.1.0"

[dependencies]
clap = "2.31.1"
failure = "0.1.1"
futures = "0.1.18"
log = "0.4.1"
log4rs = "0.8.0"
termion = "1.5.1"
tokio = "0.1.7"
xdg = "2.1.0"
# xrl = "0.0.5"
xrl = { git = "https://github.com/xi-frontend/xrl" }

[dependencies.clippy]
optional = true
version = "0.0.197"
